test/corpus/inline-directives.txt
================================================================================
@extends
================================================================================

@extends('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@yield
================================================================================

@yield('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@include
================================================================================

@include('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@includeIf
================================================================================

@includeIf('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@includeWhen
================================================================================

@includeWhen('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@includeUnless
================================================================================

@includeUnless('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@includeFirst
================================================================================

@includeFirst('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@props
================================================================================

@props('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@aware
================================================================================

 @aware(['color' => 'gray'])
--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@method
================================================================================

@method('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@inject
================================================================================

@inject('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@each
================================================================================

@each('test')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@vite
================================================================================

 @vite('resources/js/app.js')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@inlineSection
================================================================================

@section('test','test')

@section('test')
  <div></div>
@endsection

--------------------------------------------------------------------------------

(document
  (section
    (directive)
    (parameter)
    (parameter))
  (section
    (directive_start)
    (parameter)
    (element
      (start_tag
        (tag_name))
      (end_tag
        (tag_name)))
    (directive_end)))

================================================================================
@use
================================================================================

@use('App\Models\Flight')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@use alias
================================================================================

@use('App\Models\Flight', 'FlightModel')

--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@js
================================================================================

<div x-data="{ posts: @js($posts) }"></div>

--------------------------------------------------------------------------------

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value)
          (directive)
          (parameter)
          (attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
@stack
================================================================================

@stack('test')
--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@svg
================================================================================

@svg('name')
--------------------------------------------------------------------------------

(document
  (directive)
  (parameter))

================================================================================
@wireUiScripts
================================================================================

@wireUiScripts(['nonce': 'csp-token'])
@wireUiScripts(['nonce': 'csp-token', 'foo' => true])
--------------------------------------------------------------------------------

(document
  (directive)
  (parameter)
  (directive)
  (parameter))
