test/corpus/keywords.txt
================================================================================
@csrf
================================================================================

@csrf

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))

================================================================================
@viteReactRefresh
================================================================================

@viteReactRefresh

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))

================================================================================
@parent
================================================================================

@parent

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))

================================================================================
@inertia
================================================================================

@inertia

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))

================================================================================
@inertiaHead
================================================================================

@inertiaHead

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))

================================================================================
@routes
================================================================================

@routes

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))

================================================================================
@wireUiScripts
================================================================================

@wireUiScripts

--------------------------------------------------------------------------------

(document
  (keyword
    (directive)))
