test/corpus/livewire.txt
================================================================================
@livewireScripts
================================================================================

@livewireScripts

--------------------------------------------------------------------------------

(blade
  (keyword
    (directive)))

================================================================================
@livewireStyles
================================================================================

@livewireStyles

--------------------------------------------------------------------------------

(blade
  (keyword
    (directive)))

================================================================================
@livewireScriptConfig
================================================================================

@livewireScriptConfig

--------------------------------------------------------------------------------

(blade
  (keyword
    (directive)))

================================================================================
@livewire
================================================================================

 @livewire('show-posts')

--------------------------------------------------------------------------------

(blade
  (directive)
  (bracket_start)
  (parameter)
  (bracket_end))

================================================================================
@persist
================================================================================

@persist('player')
  <div>hello world</div>
@endpersist

--------------------------------------------------------------------------------

(blade
  (livewire
    (directive_start)
    (bracket_start)
    (parameter)
    (bracket_end)
    (text)
    (directive_end)))

================================================================================
@teleport
================================================================================

@teleport('player')
  <div>hello world</div>
@endteleport

--------------------------------------------------------------------------------

(blade
  (livewire
    (directive_start)
    (bracket_start)
    (parameter)
    (bracket_end)
    (text)
    (directive_end)))

================================================================================
@volt
================================================================================

@volt('player')
  <div>hello world</div>
@endvolt

--------------------------------------------------------------------------------

(blade
  (livewire
    (directive_start)
    (bracket_start)
    (parameter)
    (bracket_end)
    (text)
    (directive_end)))
