test/corpus/php-statements.txt
================================================================================
{{ escaped }}
================================================================================

{{echo 'test'}}

--------------------------------------------------------------------------------

(blade
  (php_statement
    (bracket_start)
    (php_only)
    (bracket_end)))

================================================================================
{!! not escaped !!}
================================================================================

{!!echo 'test'!!}

--------------------------------------------------------------------------------

(blade
  (php_statement
    (bracket_start)
    (php_only)
    (bracket_end)))

================================================================================
inline raw
================================================================================

@php(echo 'test')

--------------------------------------------------------------------------------

(blade
  (php_statement
    (directive)
    (bracket_start)
    (parameter)
    (bracket_end)))

================================================================================
multi line raw
================================================================================

@php
    $name = $attributes->get('name');
    $value = resolve_input($name, $value, empty($model) ? null : $model, $useOld);
@endphp

--------------------------------------------------------------------------------

(blade
  (php_statement
    (directive_start)
    (php_only)
    (directive_end)))

================================================================================
@js()
================================================================================

<div x-data="{ posts: @js($posts) }"></div>

--------------------------------------------------------------------------------

(blade
  (text)
  (php_statement
    (directive)
    (bracket_start)
    (parameter)
    (bracket_end))
  (text))
